--- a/front/pom.xml
+++ b/front/pom.xml
@@ -9,5 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>war</packaging>
     <artifactId>front</artifactId>
 </project>
