--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,4 +9,65 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-core</artifactId>
+            <version>[4.0.0-m1, )</version>
+        </dependency>
+        <dependenecy>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-api-jdo</artifactId>
+            <version>[4.0.0-m1, )</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.jdo</groupId>
+            <artifactId>jdo-api</artifactId>
+            <version>[3.0, )</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>[1.2, 1.3)</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-rdbms</artifactId>
+            <version>[4.0.0-m1, )</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.17</version>
+        </dependency>
+
+</dependencies>
+
+
+<build>
+        <plugins>
+    <plugin>
+    <groupId>org.datanucleus</groupId>
+    <artifactId>maven-datanucleus-plugin</artifactId>
+    <version>3.1.2</version>
+    <configuration>
+      <log4jConfiguration>${basedir}/log4j.properties</log4jConfiguration>
+      <verbose>false</verbose>
+      <fork>false</fork>
+    </configuration>
+    <executions>
+      <execution>
+        <phase>process-classes</phase>
+        
+      </execution>
+    </executions>
+  </plugin>
+  </plugins>
+</build>
+
+    
+
 </project>
