--- a/mock-impl/pom.xml
+++ b/mock-impl/pom.xml
@@ -10,4 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mock-impl</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>ICVT</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
