--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,33 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
-        <module>mock-impl</module>
-        <module>front</module>
-        <module>model</module>
+        <module>impl</module>
+        <!--<module>mock-impl</module>-->
+        <!--<module>front</module>-->
     </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>[1.2, 1.3)</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
