--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>core</module>
         <module>impl</module>
         <!--<module>mock-impl</module>-->
-        <!--<module>front</module>-->
+        <module>front</module>
     </modules>
     <dependencies>
         <dependency>
