--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -36,10 +36,15 @@
             <artifactId>datanucleus-rdbms</artifactId>
             <version>3.2.8</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>mysql</groupId>-->
+            <!--<artifactId>mysql-connector-java</artifactId>-->
+            <!--<version>5.1.17</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.17</version>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
