--- a/front/pom.xml
+++ b/front/pom.xml
@@ -21,7 +21,8 @@
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
-            <version>2.2.3</version>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
         </dependency>
         <dependency>
             <groupId>javax.jdo</groupId>
@@ -57,6 +58,11 @@
             <groupId>ICVT</groupId>
             <artifactId>impl</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
         </dependency>
     </dependencies>
     <build>
