--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -15,13 +15,12 @@
         <url-pattern>/inteligenciaSocial</url-pattern>
     </servlet-mapping>
     <servlet>
-        <description></description>
         <display-name>UserRestServlet</display-name>
         <servlet-name>UserRestServlet</servlet-name>
         <servlet-class>mx.com.icvt.front.UserRestServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UserRestServlet</servlet-name>
-        <url-pattern>/api/v1/*</url-pattern>
+        <url-pattern>/api/v1/login</url-pattern>
     </servlet-mapping>
 </web-app>
