Se corrige relación muchos a muchos entre noticia y extración. Se agregan jsp para definir configuraciones y para ejecutar proceso de extracción

--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,10 @@
         <servlet-name>ConfiguracionExtraccionServlet</servlet-name>
         <servlet-class>mx.com.icvt.front.ConfiguracionExtraccionServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ExtraerNoticias</servlet-name>
+        <servlet-class>mx.com.icvt.front.ExtraerNoticiasServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>InteligenciaSocial</servlet-name>
         <url-pattern>/inteligenciaSocial</url-pattern>
