--- a/front/pom.xml
+++ b/front/pom.xml
@@ -11,19 +11,19 @@
 
     <packaging>war</packaging>
     <artifactId>front</artifactId>
-    <name>ICVT-Front</name>
+    <name>front</name>
     <dependencies>
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>1.0.1.Final</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.0.1.Final</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -39,8 +39,7 @@
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
-            <version>2.4</version>
-            <classifier>jdk15</classifier>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>ICVT</groupId>
