--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,19 @@
          version="2.5">
     <display-name>Archetype Created Web Application</display-name>
     <servlet>
+        <servlet-name>jersey-servlet</servlet-name>
+        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>mx.com.icvt.front.services</param-value>
+        </init-param>
+        <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
         <servlet-name>ActualidadIndustria</servlet-name>
         <servlet-class>mx.com.icvt.front.ActualidadIndustriaServlet</servlet-class>
     </servlet>
@@ -31,6 +44,10 @@
         <servlet-class>mx.com.icvt.front.ExtraerNoticiasServlet</servlet-class>
     </servlet>
     <servlet-mapping>
+        <servlet-name>jersey-servlet</servlet-name>
+        <url-pattern>/api/v1/rest/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ActualidadIndustria</servlet-name>
         <url-pattern>/actualidadIndustria</url-pattern>
     </servlet-mapping>
@@ -52,6 +69,6 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UserRestServlet</servlet-name>
-        <url-pattern>/api/v1/*</url-pattern>
+        <url-pattern>/api/v1/users</url-pattern>
     </servlet-mapping>
 </web-app>
