--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
     </servlet>
     <servlet>
         <servlet-name>Etiquetas</servlet-name>
-        <servlet-class>mx.com.icvt.front.Etiquetas</servlet-class>
+        <servlet-class>mx.com.icvt.front.EtiquetasServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ModificarNoticia</servlet-name>
