--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -67,8 +67,9 @@
         <servlet-name>EjecutarExtraccion</servlet-name>
         <url-pattern>/ejecutarExtraccion</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>UserRestServlet</servlet-name>
-        <url-pattern>/api/v1/users</url-pattern>
+        <url-pattern>/api/v1/users/*</url-pattern>
     </servlet-mapping>
 </web-app>
