--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -70,6 +70,6 @@
 
     <servlet-mapping>
         <servlet-name>UserRestServlet</servlet-name>
-        <url-pattern>/api/v1/users/*</url-pattern>
+        <url-pattern>/api/v1/users</url-pattern>
     </servlet-mapping>
 </web-app>
