Registro de unidades económicas. Faltan pruebas

--- a/front/src/main/webapp/WEB-INF/web.xml
+++ b/front/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,10 @@
         <servlet-name>EjecutarExtraccion</servlet-name>
         <servlet-class>mx.com.icvt.front.EjecutarExtraccionServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UnidadEconomica</servlet-name>
+        <servlet-class>mx.com.icvt.front.UnidadEconomicaServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>jersey-servlet</servlet-name>
         <url-pattern>/api/v1/rest/*</url-pattern>
@@ -67,7 +71,10 @@
         <servlet-name>EjecutarExtraccion</servlet-name>
         <url-pattern>/ejecutarExtraccion</url-pattern>
     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>UnidadEconomica</servlet-name>
+        <url-pattern>/unidadEconomica</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UserRestServlet</servlet-name>
         <url-pattern>/api/v1/users</url-pattern>
