--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -42,4 +42,16 @@
             <version>2.2.1</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <mainClass>mx.com.icvt.persistence.impl.vocaciones.TestJPA</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
